<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oldal_hatter"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regisztracio"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/felhasznalo_nev"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/telefon"
                android:inputType="phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/jelszo"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/jelszo_megerosites"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/registerUserButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gomb_sarga"
                    android:onClick="registerUser"
                    android:padding="12dp"
                    android:text="@string/regisztracio"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"/>
                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gomb_piros"
                    android:onClick="cancelRegistration"
                    android:padding="12dp"
                    android:text="@string/megse"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
