<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oldal_hatter"
    tools:context=".MainActivity">

    <!-- Fejléc -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gomb_sarga"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:text="@string/app_label"
            android:textAlignment="viewStart"
            android:textColor="#0E3E37"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="74dp"
            android:layout_height="51dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu"
            android:padding="8dp"
            android:src="@menu/menu_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintVertical_bias="0.081">

        <TextView
            android:id="@+id/userTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/bemutatkozo_szoveg"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gomb_sarga"
            android:onClick="toBooking"
            android:text="@string/idopontok" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>